--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -80,7 +80,7 @@
     <string name="main_menu_title_warranties">Warranty List</string>
     <string name="main_menu_title_settings">Settings</string>
     <string name="main_text_content_description">Add Warranty</string>
-    <!--Placeholder for the App Name-->
+    <!--Placeholder is for the App Name-->
     <string name="main_rate_app_dialog_title">Rate %s?</string>
     <string name="main_rate_app_dialog_message">If you enjoy using this app, would you mind taking a moment to rate it? It won\'t take more than a minute. Thanks for your support!</string>
     <string name="main_rate_app_dialog_positive">Rate now</string>
@@ -207,11 +207,11 @@
     <string name="warranty_details_empty_device" translatable="false">•</string>
     <string name="warranty_details_empty_description">No description is provided.</string>
     <string name="warranty_details_delete_dialog_title">Delete Warranty?</string>
-    <!--Placeholder for the Warranty Title-->
+    <!--Placeholder is for the Warranty Title-->
     <string name="warranty_details_delete_dialog_message">Are you sure you want to delete %s?</string>
     <string name="warranty_details_delete_dialog_positive">Delete</string>
     <string name="warranty_details_delete_dialog_negative">Cancel</string>
-    <!--Placeholder for the Warranty Title-->
+    <!--Placeholder is for the Warranty Title-->
     <string name="warranty_details_delete_success">%s has been successfully deleted.</string>
     <!--
     Placeholders:
