--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -172,6 +172,16 @@
     <string name="add_warranty_hint_description">Enter description</string>
     <string name="add_warranty_title_date_starting">Starting Date</string>
     <string name="add_warranty_title_date_expiry">Expiry Date</string>
+    <!--
+    dd: Day
+    mm: Month
+    yyyy: Year
+
+    Samples:
+    • en-US: mm/dd/yyyy
+    • en-GB: dd/mm/yyyy
+    • fa-IR: روز/ماه/سال
+    -->
     <string name="add_warranty_hint_date">mm/dd/yyyy</string>
     <string name="add_warranty_title_date_picker_starting">Select Starting Date</string>
     <string name="add_warranty_title_date_picker_expiry">Select Expiry Date</string>
@@ -242,6 +252,16 @@
     <string name="edit_warranty_hint_description">Enter description</string>
     <string name="edit_warranty_title_date_starting">Starting Date</string>
     <string name="edit_warranty_title_date_expiry">Expiry Date</string>
+    <!--
+    dd: Day
+    mm: Month
+    yyyy: Year
+
+    Samples:
+    • en-US: mm/dd/yyyy
+    • en-GB: dd/mm/yyyy
+    • fa-IR: روز/ماه/سال
+    -->
     <string name="edit_warranty_hint_date">mm/dd/yyyy</string>
     <string name="edit_warranty_title_date_picker_starting">Select Starting Date</string>
     <string name="edit_warranty_title_date_picker_expiry">Select Expiry Date</string>
