--- a/app/src/main/res/values-en-rGB/strings.xml
+++ b/app/src/main/res/values-en-rGB/strings.xml
@@ -90,7 +90,7 @@
     <string name="forgot_pw_error_not_found">The account with the provided email does not exist.</string>
 
 
-    <string name="forgot_pw_sent_text_title">Check\nYour\nInbox</string>
+    <string name="forgot_pw_sent_text_title">Reset\nPassword</string>
     <string name="forgot_pw_sent_text_description">Please check your inbox and click on the received link to reset your password.</string>
     <string name="forgot_pw_sent_text_resend">Didn\'t receive the link?</string>
     <string name="forgot_pw_sent_btn_resend">Resend</string>
