--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -344,6 +344,11 @@
 
 
     <string name="linked_accounts_text_title">Linked Accounts</string>
+    <string name="linked_accounts_title_google">Google</string>
+    <string name="linked_accounts_title_twitter">Twitter</string>
+    <string name="linked_accounts_title_facebook">Facebook</string>
+    <string name="linked_accounts_status_not_connected">Connect</string>
+    <string name="linked_accounts_status_connected">Connected</string>
 
 
     <string name="change_password_text_title">Change Password</string>
