--- a/app/src/main/res/values-fa-rIR/strings.xml
+++ b/app/src/main/res/values-fa-rIR/strings.xml
@@ -344,6 +344,11 @@
 
 
     <string name="linked_accounts_text_title">حساب‌های متصل</string>
+    <string name="linked_accounts_title_google">گوگل</string>
+    <string name="linked_accounts_title_twitter">توییتر</string>
+    <string name="linked_accounts_title_facebook">فیسبوک</string>
+    <string name="linked_accounts_status_not_connected">متصل کردن</string>
+    <string name="linked_accounts_status_connected">متصل</string>
 
 
     <string name="change_password_text_title">تغییر رمز‌عبور</string>
