--- a/app/src/main/res/values-en-rGB/strings.xml
+++ b/app/src/main/res/values-en-rGB/strings.xml
@@ -347,8 +347,8 @@
     <string name="linked_accounts_title_google">Google</string>
     <string name="linked_accounts_title_twitter">Twitter</string>
     <string name="linked_accounts_title_facebook">Facebook</string>
-    <string name="linked_accounts_status_not_connected">Connect</string>
-    <string name="linked_accounts_status_connected">Connected</string>
+    <string name="linked_accounts_status_connect">Connect</string>
+    <string name="linked_accounts_status_disconnect">Disconnect</string>
 
 
     <string name="change_password_text_title">Change Password</string>
