--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -50,6 +50,7 @@
     <string name="login_error_email">The entered email address is not valid!</string>
     <string name="login_error_not_found">The account with the provided email does not exist.</string>
     <string name="login_error_credentials">The provided credentials are incorrect.</string>
+    <string name="login_error_email_exists_with_different_credentials">An account already exists with the same email address but different sign-in credentials.</string>
 
 
     <string name="register_text_title">Register</string>
