Revamped Register Page UI Code

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,6 +62,8 @@
     <string name="register_title_confirm_password">Confirm Password</string>
     <string name="register_hint_confirm_password">Re-enter your password</string>
     <string name="register_btn_register">Register</string>
+    <string name="register_text_other_methods">Or continue with</string>
+    <string name="register_text_other_methods_landscape">Or</string>
     <string name="register_text_login_title">Already have an account?</string>
     <string name="register_btn_login">Login</string>
     <string name="register_helper_password_weak">Weak</string>
