--- a/app/src/main/res/values-fa-rIR/strings.xml
+++ b/app/src/main/res/values-fa-rIR/strings.xml
@@ -63,6 +63,8 @@
     <string name="register_title_confirm_password">تکرار رمز‌عبور</string>
     <string name="register_hint_confirm_password">رمز‌عبور را دوباره وارد کنید</string>
     <string name="register_btn_register">ثبت‌نام</string>
+    <string name="register_text_other_methods">یا ورود با</string>
+    <string name="register_text_other_methods_landscape">یا</string>
     <string name="register_text_login_title">در حال حاضر حساب کاربری دارید؟</string>
     <string name="register_btn_login">وارد شوید</string>
     <string name="register_helper_password_weak">ضعیف</string>
