--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -86,11 +86,17 @@
     <string name="forgot_pw_btn_send">Send Email</string>
     <string name="forgot_pw_btn_return">Return To Login</string>
     <string name="forgot_pw_error_blank_email">Enter your email address!</string>
+    <!--Placeholder is for the remaining waiting time-->
     <string name="forgot_pw_error_timer_is_not_zero_zero">Please wait for %d seconds before requesting again.</string>
+    <!--Placeholder is for the remaining waiting time-->
     <string name="forgot_pw_error_timer_is_not_zero_one">Please wait for %d second before requesting again.</string>
+    <!--Placeholder is for the remaining waiting time-->
     <string name="forgot_pw_error_timer_is_not_zero_two">Please wait for %d seconds before requesting again.</string>
+    <!--Placeholder is for the remaining waiting time-->
     <string name="forgot_pw_error_timer_is_not_zero_few">Please wait for %d seconds before requesting again.</string>
+    <!--Placeholder is for the remaining waiting time-->
     <string name="forgot_pw_error_timer_is_not_zero_many">Please wait for %d seconds before requesting again.</string>
+    <!--Placeholder is for the remaining waiting time-->
     <string name="forgot_pw_error_timer_is_not_zero_other">Please wait for %d seconds before requesting again.</string>
     <string name="forgot_pw_error_email">The entered email address is not valid!</string>
     <string name="forgot_pw_error_not_found">The account with the provided email does not exist.</string>
