--- a/app/src/main/res/values-fa-rIR/strings.xml
+++ b/app/src/main/res/values-fa-rIR/strings.xml
@@ -43,6 +43,10 @@
     <string name="core_theme_title_default">پیش‌فرض سیستم</string>
     <string name="core_theme_title_light">روشن</string>
     <string name="core_theme_title_dark">تیره</string>
+    <string name="core_password_strength_short">رمز‌عبور باید حداقل %d کاراکتر باشد!</string>
+    <string name="core_password_strength_weak">ضعیف</string>
+    <string name="core_password_strength_mediocre">متوسط</string>
+    <string name="core_password_strength_strong">قوی</string>
 
 
     <string name="onboarding_btn_skip">رد کردن</string>
@@ -89,14 +93,10 @@
     <string name="register_text_other_methods_landscape">یا</string>
     <string name="register_text_login_title">در حال حاضر حساب کاربری دارید؟</string>
     <string name="register_btn_login">وارد شوید</string>
-    <string name="register_helper_password_weak">ضعیف</string>
-    <string name="register_helper_password_mediocre">متوسط</string>
-    <string name="register_helper_password_strong">قوی</string>
     <string name="register_error_blank_email">آدرس ایمیل خود را وارد کنید!</string>
     <string name="register_error_blank_password">رمز‌عبور را وارد کنید!</string>
     <string name="register_error_blank_confirm_password">رمز‌عبور را دوباره وارد کنید!</string>
     <string name="register_error_email">آدرس ایمیل وارد شده، معتبر نیست!</string>
-    <string name="register_error_password_short">رمز‌عبور باید حداقل 6 کاراکتر باشد!</string>
     <string name="register_error_password_not_match">رمز‌عبور و تکرار رمز‌عبور وارد شده با هم مطابقت ندارند!</string>
     <string name="register_error_account_exists">حسابی با ایمیل وارد شده از قبل وجود دارد.</string>
     <string name="register_error_email_exists_with_different_credentials">حسابی با ایمیل وارد شده اما با روش‌های ورود متفاوت از قبل وجود دارد.</string>
@@ -395,13 +395,9 @@
     <string name="change_password_title_confirm_new_password">تکرار رمز‌عبور جدید</string>
     <string name="change_password_hint_confirm_new_password">رمز‌عبور جدید را مجددا وارد کنید</string>
     <string name="change_password_btn_change">تغییر رمز‌عبور</string>
-    <string name="change_password_helper_password_weak">ضعیف</string>
-    <string name="change_password_helper_password_mediocre">متوسط</string>
-    <string name="change_password_helper_password_strong">قوی</string>
     <string name="change_password_error_blank_current">رمز‌عبور فعلی خود را وارد کنید!</string>
     <string name="change_password_error_blank_new">رمز‌عبور جدیدی را وارد کنید!</string>
     <string name="change_password_error_blank_confirm">رمز‌عبور جدید را مجددا وارد کنید!</string>
-    <string name="change_password_error_password_short">رمز‌عبور باید حداقل 6 کاراکتر باشد!</string>
     <string name="change_password_error_match">رمز‌عبور جدید و تکرار رمز‌عبور جدید وارد شده با هم مطابقت ندارند!</string>
     <string name="change_password_error_credentials">رمز‌عبور فعلی وارد شده نادرست است.</string>
     <string name="change_password_dialog_message">رمز‌عبور شما با موفقیت تغییر کرد.</string>
