--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,6 +42,10 @@
     <string name="core_theme_title_default">System Default</string>
     <string name="core_theme_title_light">Light</string>
     <string name="core_theme_title_dark">Dark</string>
+    <string name="core_password_strength_short">Password should be at least %d characters!</string>
+    <string name="core_password_strength_weak">Weak</string>
+    <string name="core_password_strength_mediocre">Mediocre</string>
+    <string name="core_password_strength_strong">Strong</string>
 
 
     <string name="onboarding_btn_skip">Skip</string>
@@ -88,14 +92,10 @@
     <string name="register_text_other_methods_landscape">Or</string>
     <string name="register_text_login_title">Already have an account?</string>
     <string name="register_btn_login">Login</string>
-    <string name="register_helper_password_weak">Weak</string>
-    <string name="register_helper_password_mediocre">Mediocre</string>
-    <string name="register_helper_password_strong">Strong</string>
     <string name="register_error_blank_email">Enter your email address!</string>
     <string name="register_error_blank_password">Enter your password!</string>
     <string name="register_error_blank_confirm_password">Re-enter your password!</string>
     <string name="register_error_email">The entered email address is not valid!</string>
-    <string name="register_error_password_short">Password should be at least 6 characters!</string>
     <string name="register_error_password_not_match">Your password and confirm password do not match!</string>
     <string name="register_error_account_exists">An account with the provided email already exists.</string>
     <string name="register_error_email_exists_with_different_credentials">An account already exists with the same email address but different sign-in credentials.</string>
@@ -404,13 +404,9 @@
     <string name="change_password_title_confirm_new_password">Confirm New Password</string>
     <string name="change_password_hint_confirm_new_password">Re-enter the new password</string>
     <string name="change_password_btn_change">Change Password</string>
-    <string name="change_password_helper_password_weak">Weak</string>
-    <string name="change_password_helper_password_mediocre">Mediocre</string>
-    <string name="change_password_helper_password_strong">Strong</string>
     <string name="change_password_error_blank_current">Enter your current password!</string>
     <string name="change_password_error_blank_new">Enter a new password!</string>
     <string name="change_password_error_blank_confirm">Re-enter the new password!</string>
-    <string name="change_password_error_password_short">Password should be at least 6 characters!</string>
     <string name="change_password_error_match">New password and confirm new password do not match!</string>
     <string name="change_password_error_credentials">The provided credentials are incorrect.</string>
     <string name="change_password_dialog_message">Your password has been successfully changed.</string>
